shoplist & buyer menu überarbeitet

--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="140dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:text="john.doen@gmail.com"
+        android:text="@string/email_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -57,7 +57,7 @@
         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!?äöüÄÖÜ"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="********"
+        android:text="@string/pw"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
