--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -6,6 +6,10 @@
         android:title="@string/tb_menu"
         android:visible="true"
         app:showAsAction="ifRoom" />
-    <item android:title="Item 1" />
-    <item android:title="Item 2" />
+    <item
+        android:id="@+id/item1"
+        android:title="Item 1" />
+    <item
+        android:id="@+id/item2"
+        android:title="Item 2" />
 </menu>
