account_buyer.xml, qrscan.xml & toolbar_menu.xml updated fixed load_credit.xml & shoplist.xml (somehow the textSize was set to 18, it should've been 18sp)

--- a/app/src/main/res/layout/load_credit.xml
+++ b/app/src/main/res/layout/load_credit.xml
@@ -70,15 +70,17 @@
         android:id="@+id/editTextNumberDecimal2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="76dp"
         android:ems="10"
         android:gravity="right"
         android:hint="0,00 "
         android:inputType="numberDecimal"
-        app:layout_constraintBottom_toTopOf=""
+        app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView12"
@@ -163,7 +165,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="€"
-        android:textSize="18"
+        android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/listView_payment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.177"
