--- a/app/src/main/res/layout/account_buyer.xml
+++ b/app/src/main/res/layout/account_buyer.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/account_buyer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,7 +20,7 @@
         app:titleTextColor="@color/white" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/options_imgview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -30,18 +30,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="162dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
-        android:text="John Doe"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
-    <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/options_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -52,7 +41,18 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/options_name_data"
+        android:layout_width="162dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/name_hint"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/options_name_text"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <TextView
+        android:id="@+id/options_mail_text"
         android:layout_width="61dp"
         android:layout_height="29dp"
         android:layout_marginStart="12dp"
@@ -60,76 +60,109 @@
         android:text="e-mail:"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/options_name_text" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/options_mail_data"
         android:layout_width="174dp"
         android:layout_height="31dp"
         android:layout_marginTop="40dp"
+        android:layout_marginStart="20dp"
         android:text="john.doe@gmail.com"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintStart_toEndOf="@+id/options_mail_text"
+        app:layout_constraintTop_toBottomOf="@+id/options_name_data" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/options_credit_text"
         android:layout_width="102dp"
         android:layout_height="30dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="68dp"
         android:text="Credit:"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/options_mail_text"
         tools:visibility="visible" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="263dp"
-        android:layout_height="103dp"
-        android:layout_marginTop="68dp"
-        android:ems="10"
-        android:inputType="textPersonName"
+    <TextView
+        android:id="@+id/options_credit_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="64dp"
+        android:text="@string/dummysum"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/options_credit_text"
+        app:layout_constraintTop_toBottomOf="@+id/options_mail_data"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/options_recent_buys_text"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="20dp"
         android:text="Recent Buys:"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/options_credit_text"
+        tools:visibility="visible" />
+
+    <ListView
+        android:id="@+id/listRecentBuys"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/options_logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />
+        app:layout_constraintTop_toBottomOf="@+id/options_recent_buys_text" />
+
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/options_open_map"
         android:layout_width="155dp"
         android:layout_height="57dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginBottom="44dp"
         android:text="Open Map"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintHorizontal_bias="0.093"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/options_open_shoplist"
         android:layout_width="158dp"
         android:layout_height="58dp"
+        android:layout_marginBottom="44dp"
         android:text="Shoplist"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintHorizontal_bias="0.877"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextNumberDecimal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:ems="10"
-        android:inputType="numberDecimal"
+
+    <Button
+        android:id="@+id/options_logout"
+        android:layout_width="155dp"
+        android:layout_height="57dp"
+        android:layout_marginBottom="11dp"
+        android:text="Logout"
+        app:layout_constraintBottom_toTopOf="@+id/options_open_map"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.053"
-        app:layout_constraintStart_toEndOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        tools:visibility="visible" />
+        app:layout_constraintHorizontal_bias="0.093"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/options_load_credit"
+        android:layout_width="158dp"
+        android:layout_height="58dp"
+        android:layout_marginBottom="11dp"
+        android:text="Load Credit"
+        app:layout_constraintBottom_toTopOf="@+id/options_open_shoplist"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.877"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
