--- a/app/src/main/res/layout/qrscan.xml
+++ b/app/src/main/res/layout/qrscan.xml
@@ -28,23 +28,6 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         >
 
-       <!--><TextView
-            android:id="@+id/scan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:textColor="@android:color/black"
-            android:text="@string/scanprod"
-            android:textSize="36sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            /> -->
-
         <Button
             android:id="@+id/btn_scan_product"
             android:layout_width="match_parent"
@@ -59,20 +42,6 @@
             android:layout_height="250dp"
             android:layout_marginTop="20dp"
             />
-
-
-        <!--   <View
-               android:id="@+id/divider"
-               android:layout_width="406dp"
-               android:layout_height="0dp"
-               android:layout_marginTop="250dp"
-               android:background="?android:attr/listDivider"
-               app:layout_constraintBottom_toBottomOf="parent"
-               app:layout_constraintEnd_toEndOf="parent"
-               app:layout_constraintHorizontal_bias="0.0"
-               app:layout_constraintStart_toStartOf="parent"
-               app:layout_constraintTop_toBottomOf="@+id/info"
-               app:layout_constraintVertical_bias="1.0" /> -->
 
         <TextView
             android:id="@+id/products_qr"
@@ -92,11 +61,13 @@
         app:layout_constraintTop_toBottomOf="@+id/info"
         tools:layout_editor_absoluteX="-16dp" />
 
+
+
     <ListView
         android:id="@+id/listScannedProducts"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/proceed_with_payment"
+        app:layout_constraintBottom_toTopOf="@+id/text_sum"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/info" />
@@ -108,7 +79,39 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintTop_toBottomOf="@+id/listScannedProducts"
         tools:layout_editor_absoluteX="-16dp" />
-     <Button
+
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintTop_toBottomOf="@+id/listScannedProducts"
+        tools:layout_editor_absoluteX="-16dp" />
+
+    <TextView
+        android:id="@+id/text_sum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sum"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/proceed_with_payment"
+        app:layout_constraintEnd_toStartOf="@+id/sum_amount"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/sum_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/dummysum"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/proceed_with_payment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
          android:id="@+id/proceed_with_payment"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
@@ -120,4 +123,7 @@
          app:layout_constraintHorizontal_bias="0.516"
          app:layout_constraintStart_toStartOf="parent" />
 
- </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
