--- a/app/src/main/res/layout/shoplist.xml
+++ b/app/src/main/res/layout/shoplist.xml
@@ -59,7 +59,7 @@
         android:layout_height="58dp"
         android:layout_marginTop="40dp"
         android:text="Show on Map"
-        android:textSize="18"
+        android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
         android:layout_width="399dp"
         android:layout_height="68dp"
         android:text="Filter"
-        android:textSize="18"
+        android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
