--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -8,8 +8,8 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/item1"
-        android:title="Item 1" />
+        android:title="Options" />
     <item
         android:id="@+id/item2"
-        android:title="Item 2" />
+        android:title="Logout" />
 </menu>
