--- a/app/src/main/res/layout/farm_store.xml
+++ b/app/src/main/res/layout/farm_store.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/farm_store"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
+
+    <Button
         android:id="@+id/textFarmStoreName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:text="Button" />
 
 </LinearLayout>
 
