--- a/app/src/main/res/layout/filter_map.xml
+++ b/app/src/main/res/layout/filter_map.xml
@@ -92,7 +92,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/button_showresult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Show Result"
