--- a/app/src/main/res/layout/pay_buyer_page.xml
+++ b/app/src/main/res/layout/pay_buyer_page.xml
@@ -68,13 +68,11 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btn_paynow"
         android:layout_width="144dp"
         android:layout_height="56dp"
-
-
         android:text="Pay Now"
-        app:layout_constraintBottom_toTopOf="@id/button6"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.569"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +104,7 @@
         android:layout_marginBottom="16dp"
         android:text="Summe:"
         android:textSize="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintBottom_toTopOf="@+id/btn_paynow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/listView_payment"
         app:layout_constraintVertical_bias="1.0" />
