toolbar angepasst und welcome page

--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -8,8 +8,12 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/item1"
-        android:title="Profile" />
+        android:title="Settings"
+        />
     <item
         android:id="@+id/item2"
+        android:title="Profile" />
+    <item
+        android:id="@+id/item3"
         android:title="Logout" />
 </menu>
